# solar-ev-distributed-charging

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
docs/: llm_handoff.md  research_plan.md
examples/: run_cinematic_demo.py  run_minimal_scenario.py  run_research_experiment.py
src/solar_ev_charging/: __init__.py  algorithms.py  cli.py  experiments.py  models.py  reporting.py  scenarios.py  security.py  simulation.py  solar.py
tests/: test_algorithms.py  test_cli.py  test_models.py  test_reporting.py  test_security.py  test_simulation.py
