[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-ev-distributed-charging"
version = "0.2.0"
description = "Research toolkit for distributed solar EV charging admission and assignment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Akir Oussama" }]
keywords = [
  "electric-vehicles",
  "solar-energy",
  "distributed-systems",
  "admission-control",
  "queueing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pre-commit>=3.7",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/akiroussama/solar-ev-distributed-charging"
Repository = "https://github.com/akiroussama/solar-ev-distributed-charging"
Issues = "https://github.com/akiroussama/solar-ev-distributed-charging/issues"

[project.scripts]
solar-ev-experiment = "solar_ev_charging.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["solar_ev_charging"]
